--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/linear_interpolator">
+    android:interpolator="@android:anim/overshoot_interpolator">
     <alpha
-        android:duration="300"
+        android:duration="400"
         android:fromAlpha="0.1"
         android:toAlpha="1.0" />
+    <scale
+        android:duration="200"
+        android:fromXScale="0.8"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1"
+        android:fromYScale="0.8"
+        android:toYScale="1" />
 </set>
