--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -2,7 +2,15 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/linear_interpolator">
     <alpha
-        android:duration="300"
+        android:duration="400"
         android:fromAlpha="1.0"
         android:toAlpha="0.1" />
+    <scale
+        android:duration="200"
+        android:fromXScale="1"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="0.9"
+        android:fromYScale="1"
+        android:toYScale="0.9" />
 </set>
