--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="light_white">#FFFFF0</color>
     <color name="light_red">#DC143C</color>
     <color name="light_red_fade">#26DC143C</color>
+    <color name="dark_jungle_green">#1A2421</color>
+    <color name="grey_70">#B32B2B2B</color>
 </resources>
