--- a/app/src/main/res/layout/layout_main_screen_recylerview_list.xml
+++ b/app/src/main/res/layout/layout_main_screen_recylerview_list.xml
@@ -3,9 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
-    android:background="@color/light_dark"
-    android:paddingTop="10dp">
+    android:layout_height="285dp"
+    android:background="@color/light_dark">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/delete_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/delete"
+        android:background="@color/light_grey"
+        android:elevation="5dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintHorizontal_bias="0.01"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintWidth_percent="0.1"
+        app:shapeAppearanceOverlay="@style/corners_hundred_percentage" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/bg_bottom"
@@ -45,7 +62,6 @@
         android:id="@+id/card_info"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
         android:fontFamily="@font/rajdhani_regular"
         android:gravity="center"
         android:text="@string/notes_hint"
@@ -54,21 +70,25 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/bg_bottom"
         app:layout_constraintEnd_toEndOf="@id/bg_bottom"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/bg_bottom"
-        app:layout_constraintTop_toTopOf="@id/bg_bottom" />
+        app:layout_constraintTop_toTopOf="@id/bg_bottom"
+        app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/bg"
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="225dp"
         android:alpha="0.8"
         android:background="@drawable/black_card_bg_one"
         android:paddingHorizontal="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
+        app:layout_constraintTop_toTopOf="@+id/delete_btn"
+        app:layout_constraintVertical_bias="0.35"
         app:shapeAppearanceOverlay="@style/corners_ten_percentage" />
 
     <TextView
@@ -198,9 +218,9 @@
         android:layout_height="0dp"
         android:background="@drawable/chips"
         app:layout_constraintBottom_toTopOf="@+id/card_number"
-        app:layout_constraintDimensionRatio="1.3:1"
+        app:layout_constraintDimensionRatio="1.25:1"
         app:layout_constraintEnd_toEndOf="@id/bg"
-        app:layout_constraintHeight_percent="0.12"
+        app:layout_constraintHeight_percent="0.125"
         app:layout_constraintHorizontal_bias="0.925"
         app:layout_constraintStart_toStartOf="@id/bg"
         app:layout_constraintTop_toTopOf="@id/bg"
