--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="light_dark">#FF000000</color>
     <color name="dark">#121212</color>
     <color name="grey">#2B2B2B</color>
+    <color name="light_grey">#BF2B2B2B</color>
     <color name="light_white">#FFFFF0</color>
     <color name="light_red">#DC143C</color>
     <color name="light_red_fade">#26DC143C</color>
