--- a/app/src/main/res/layout/layout_add_card.xml
+++ b/app/src/main/res/layout/layout_add_card.xml
@@ -26,8 +26,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rounded_button"
-        android:text="save"
         android:fontFamily="@font/rajdhani_medium"
+        android:text="@string/save"
         android:textColor="@color/white"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,9 +48,11 @@
         android:inputType="number"
         android:maxLength="19"
         android:maxLines="1"
+        android:nextFocusDown="@id/edit_holder_name"
         android:paddingHorizontal="16dp"
         android:paddingVertical="1dp"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,11 +75,13 @@
         android:inputType="date"
         android:maxLength="2"
         android:maxLines="1"
+        android:nextFocusDown="@id/edit_valid_year"
         android:paddingHorizontal="2dp"
         android:paddingVertical="1dp"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/card_notes"
+        app:layout_constraintBottom_toTopOf="@id/edit_card_notes"
         app:layout_constraintHeight_percent="0.0375"
         app:layout_constraintStart_toStartOf="@id/edit_holder_name"
         app:layout_constraintTop_toBottomOf="@+id/edit_holder_name"
@@ -96,9 +100,12 @@
         android:inputType="date"
         android:maxLength="4"
         android:maxLines="1"
+        android:nextFocusDown="@id/edit_cvv"
         android:paddingHorizontal="2dp"
         android:paddingVertical="1dp"
+        android:text="@string/_20"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/edit_valid_date"
         app:layout_constraintEnd_toEndOf="@+id/edit_holder_name"
@@ -119,10 +126,12 @@
         android:importantForAutofill="no"
         android:inputType="text"
         android:maxLines="1"
+        android:nextFocusDown="@id/edit_valid_date"
         android:paddingHorizontal="16dp"
         android:paddingVertical="1dp"
         android:textAllCaps="true"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintEnd_toEndOf="parent"
@@ -301,9 +310,11 @@
         android:inputType="date"
         android:maxLength="3"
         android:maxLines="1"
+        android:nextFocusDown="@id/edit_card_notes"
         android:paddingHorizontal="2dp"
         android:paddingVertical="1dp"
         android:textColor="@color/white"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/edit_valid_year"
         app:layout_constraintEnd_toEndOf="@+id/edit_holder_name"
@@ -328,7 +339,7 @@
         app:layout_constraintWidth_percent="0.35" />
 
     <EditText
-        android:id="@+id/card_notes"
+        android:id="@+id/edit_card_notes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/edit_text_shape"
@@ -342,6 +353,7 @@
         android:paddingVertical="1dp"
         android:textColor="@color/white"
         android:textColorHint="@color/grey"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/card"
         app:layout_constraintEnd_toEndOf="@+id/spinner_card_type"
