--- a/app/src/main/res/layout/layout_add_card.xml
+++ b/app/src/main/res/layout/layout_add_card.xml
@@ -7,6 +7,24 @@
     android:background="@color/light_dark"
     tools:ignore="ContentDescription">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/nfc_button"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_button_two"
+        android:fontFamily="@font/rajdhani_medium"
+        android:text="@string/nfc"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/card"
+        app:layout_constraintDimensionRatio="4:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.065"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.666" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/card"
         android:layout_width="match_parent"
@@ -18,7 +36,7 @@
         app:layout_constraintHeight_percent="0.28"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.4"
         app:shapeAppearanceOverlay="@style/corners_ten_percentage" />
 
     <androidx.appcompat.widget.AppCompatButton
