--- a/app/src/main/res/layout/layout_main_activity.xml
+++ b/app/src/main/res/layout/layout_main_activity.xml
@@ -11,6 +11,7 @@
         android:name="com.zimneos.mycards.presentation.CardDataFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="20dp"
         tools:layout="@layout/layout_main_content_for_fragment" />
 
 
