--- a/app/src/main/res/layout/layout_main_screen_recylerview_list.xml
+++ b/app/src/main/res/layout/layout_main_screen_recylerview_list.xml
@@ -217,6 +217,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/chips"
+        android:alpha="0.8"
         app:layout_constraintBottom_toTopOf="@+id/card_number"
         app:layout_constraintDimensionRatio="1.25:1"
         app:layout_constraintEnd_toEndOf="@id/bg"
@@ -224,7 +225,7 @@
         app:layout_constraintHorizontal_bias="0.925"
         app:layout_constraintStart_toStartOf="@id/bg"
         app:layout_constraintTop_toTopOf="@id/bg"
-        app:layout_constraintVertical_bias="0.88"
+        app:layout_constraintVertical_bias="1"
         app:shapeAppearanceOverlay="@style/corners_ten_percentage" />
 
     <com.google.android.material.imageview.ShapeableImageView
